fix scrollbars color

--- a/src/sass/partials/_basic.scss
+++ b/src/sass/partials/_basic.scss
@@ -167,7 +167,7 @@ img:not([src]) {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(black, .3);
+    background: rgba(black, .1);
     border: solid 3px transparent;
     border-radius: 5px;
     min-height: 50px;
